data pass and legends error removal pass