@@ -1,7 +1,5 @@
 package pokecube.legends.blocks.normalblocks;
 
-import java.util.List;
-
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.core.Holder;
@@ -10,7 +8,6 @@ import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerLevel;
 import net.minecraft.tags.FluidTags;
 import net.minecraft.util.RandomSource;
-import net.minecraft.world.level.BlockGetter;
 import net.minecraft.world.level.LevelReader;
 import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.block.BonemealableBlock;
@@ -18,18 +15,17 @@ import net.minecraft.world.level.block.GrassBlock;
 import net.minecraft.world.level.block.SnowLayerBlock;
 import net.minecraft.world.level.block.SnowyDirtBlock;
 import net.minecraft.world.level.block.state.BlockState;
-import net.minecraft.world.level.block.state.properties.BlockStateProperties;
 import net.minecraft.world.level.levelgen.feature.ConfiguredFeature;
 import net.minecraft.world.level.levelgen.feature.configurations.RandomPatchConfiguration;
 import net.minecraft.world.level.levelgen.placement.PlacedFeature;
 import net.minecraft.world.level.lighting.LightEngine;
-import net.minecraftforge.common.IPlantable;
-import net.minecraftforge.common.PlantType;
 import pokecube.legends.init.BlockInit;
 import pokecube.legends.init.PlantsInit;
 import thut.lib.RegHelper;
 
-public class AgedGrassBlock extends GrassBlock implements BonemealableBlock
+import java.util.List;
+
+public class AgedGrassBlock extends GrassBlock
 {
     public AgedGrassBlock(final Properties properties)
     {
@@ -37,7 +33,6 @@ public class AgedGrassBlock extends GrassBlock implements BonemealableBlock
         this.registerDefaultState(this.stateDefinition.any().setValue(SnowyDirtBlock.SNOWY, false));
     }
 
-    @SuppressWarnings("deprecation")
     @Override
     public void randomTick(final BlockState state, final ServerLevel world, final BlockPos pos, final RandomSource random)
     {
@@ -87,25 +82,6 @@ public class AgedGrassBlock extends GrassBlock implements BonemealableBlock
     }
 
     @Override
-    public boolean canSustainPlant(final BlockState state, final BlockGetter block, final BlockPos pos, final Direction direction, final IPlantable plantable)
-    {
-        final BlockPos plantPos = new BlockPos(pos.getX(), pos.getY() + 1, pos.getZ());
-        final PlantType plantType = plantable.getPlantType(block, plantPos);
-
-        if (plantType == PlantType.PLAINS)
-            return true;
-        else if (plantType == PlantType.WATER)
-            return block.getFluidState(pos).is(FluidTags.WATER) && block.getBlockState(pos) == this.defaultBlockState();
-        else if (plantType == PlantType.BEACH)
-            return ((block.getBlockState(pos.east()).getBlock() == Blocks.WATER || block.getBlockState(pos.east()).hasProperty(BlockStateProperties.WATERLOGGED))
-                    || (block.getBlockState(pos.west()).getBlock() == Blocks.WATER || block.getBlockState(pos.west()).hasProperty(BlockStateProperties.WATERLOGGED))
-                    || (block.getBlockState(pos.north()).getBlock() == Blocks.WATER || block.getBlockState(pos.north()).hasProperty(BlockStateProperties.WATERLOGGED))
-                    || (block.getBlockState(pos.south()).getBlock() == Blocks.WATER || block.getBlockState(pos.south()).hasProperty(BlockStateProperties.WATERLOGGED)));
-        else
-            return super.canSustainPlant(state, block, pos, direction, plantable);
-    }
-
-    @Override
     public void performBonemeal(ServerLevel world, RandomSource random, BlockPos pos, BlockState state)
     {
         BlockPos posAbove = pos.above();
@@ -147,7 +123,7 @@ public class AgedGrassBlock extends GrassBlock implements BonemealableBlock
                     continue;
                  }
 
-                 placedFeature = ((RandomPatchConfiguration)list.get(0).config()).feature();
+                 placedFeature = ((RandomPatchConfiguration)list.getFirst().config()).feature();
               } else {
                   placedFeature = world.registryAccess().registryOrThrow(RegHelper.PLACED_FEATURE_REGISTRY)
                           .getHolderOrThrow(ResourceKey.create(RegHelper.PLACED_FEATURE_REGISTRY, ResourceLocation.parse("pokecube_legends:aged_grass_bonemeal")));
